    as well as v3.)
  - Added the %API directive.
  - Added the /API/ annotation.
  - Added sipIsAPIEnabled() to the C API.
  - Added sip.getapi() and sip.setapi() to the Python API.
  - Mapped types can now act as a namespace for enums and static methods.
  - The /Array/ annotation can now be applied to classes and mapped types.
  - SIP is now also licensed under the GPL v2 and v3.

v4.8.1 16th June 2009
  - Added support for defining a private assignment operator to suppress the
    possible generation of an assignment helper.

v4.8 5th June 2009
  - Added support for Python v3.
  - Added the %BIGetBufferCode and %BIReleaseBufferCode to support the buffer
    interface of Python v3.
  - Added the %DefaultMetatype directive and the /Metatype/ class annotation to
    allow the meta-type of a wrapped type to be changed.
  - Added the %DefaultSupertype directive and the /Supertype/ class annotation
    to allow the super-type of a wrapped type to be changed.
  - Added the sip.simplewrapper type to be used as a super-type for wrapped
    types that don't take part in parent/child relationships.
  - Added the %InitialisationCode directive.
  - Added the /KeepReference/ argument annotation.
  - Added the /Encoding/ argument, function, typedef and variable annotation.
  - super() now works as expected with wrapped types.
  - Added support for __floordiv__, __ifloordiv__, __truediv__, __itruediv__
    and __index__.
  - __bool__ is a synonym for __nonzero__.
  - Sphinx is now used for the documentation.
  - Many additions and deprecations in the API to eliminate the differences
    between classes and mapped types.  (See the documentation for the details.)

v4.7.9 17th November 2008
  - A bug fix release.

v4.7.8 8th November 2008
  - Added the /Deprecated/ class and function annotation (based on a patch from
    Lorenzo Berni).
  - Templates now support instance variables and enums.
  - A Python int object can now be used whenever an enum is expected without