@@ -189,7 +189,8 @@ class Makefile:
     """
     def __init__(self, configuration, console=0, qt=0, opengl=0, python=0,
                  threaded=0, warnings=1, debug=0, dir=None,
-                 makefile="Makefile", installs=None, universal=''):
+                 makefile="Makefile", installs=None, universal='',
+                 arch='i386 ppc'):
         """Initialise an instance of the target.  All the macros are left
         unchanged allowing scripts to manipulate them at will.
 
@@ -212,6 +213,8 @@ class Makefile:
         destination.  If the source is another list then it is a set of source
         files and the destination is a directory.
         universal is the name of the SDK if the target is a MacOS/X universal
+        binary.
+        arch is the space separated architectures to include in a universal
         binary.
         """
         if qt:
@@ -244,6 +247,7 @@ class Makefile:
         self._makefile = makefile
         self._installs = installs
         self._universal = universal
+        self._arch = arch
 
         self._finalised = 0
 
@@ -350,8 +354,12 @@ class Makefile:
 
         # Handle MacOS/X universal binaries.
         if self._universal:
-            unicflags = ('-arch ppc -arch i386 -isysroot %s' % self._universal).split()
-            unilflags = ('-arch ppc -arch i386 -Wl,-syslibroot,%s' % self._universal).split()
+            arch_flags = []
+            for a in self._arch.split():
+                arch_flags.append('-arch ' + a)
+
+            unicflags = arch_flags + ('-isysroot %s' % self._universal).split()
+            unilflags = arch_flags + ('-Wl,-syslibroot,%s' % self._universal).split()
 
             cflags.lextend(unicflags)
             cxxflags.lextend(unicflags)
@@ -1272,7 +1280,7 @@ class ModuleMakefile(Makefile):
     def __init__(self, configuration, build_file, install_dir=None, static=0,
                  console=0, qt=0, opengl=0, threaded=0, warnings=1, debug=0,
                  dir=None, makefile="Makefile", installs=None, strip=1,
-                 export_all=0, universal=''):
+                 export_all=0, universal='', arch='i386 ppc'):
         """Initialise an instance of a module Makefile.
 
         build_file is the file containing the target specific information.  If
@@ -1286,7 +1294,7 @@ class ModuleMakefile(Makefile):
         increases the size of the module and slows down module load times but
         may avoid problems with modules that use exceptions.  The default is 0.
         """
-        Makefile.__init__(self, configuration, console, qt, opengl, 1, threaded, warnings, debug, dir, makefile, installs, universal)
+        Makefile.__init__(self, configuration, console, qt, opengl, 1, threaded, warnings, debug, dir, makefile, installs, universal, arch)
 
         self._build = self.parse_build_file(build_file)
         self._install_dir = install_dir
@@ -1603,14 +1611,14 @@ class ProgramMakefile(Makefile):
     def __init__(self, configuration, build_file=None, install_dir=None,
                  console=0, qt=0, opengl=0, python=0, threaded=0, warnings=1,
                  debug=0, dir=None, makefile="Makefile", installs=None,
-                 universal=''):
+                 universal='', arch='i386 ppc'):
         """Initialise an instance of a program Makefile.
 
         build_file is the file containing the target specific information.  If
         it is a dictionary instead then its contents are validated.
         install_dir is the directory the target will be installed in.
         """
-        Makefile.__init__(self, configuration, console, qt, opengl, python, threaded, warnings, debug, dir, makefile, installs, universal)
+        Makefile.__init__(self, configuration, console, qt, opengl, python, threaded, warnings, debug, dir, makefile, installs, universal, arch)
 
         self._install_dir = install_dir
 
